# plumber-rs

./: .gitignore  Cargo.toml  README.md  build.rs  generate-bindings.sh
example/: Cargo.toml  echo_server.psm  echo_server.pss
example/src/: lib.rs
examples/echo/: Cargo.toml  echo_server.pss
examples/echo/src/: lib.rs
examples/hello/: Cargo.toml
examples/hello/src/: lib.rs
examples/typed/: Cargo.toml  point_dist.pss
examples/typed/src/: lib.rs
include/: plumber_api.h  pstd.h  va_list_helper.h
src/: lib.rs  log.rs  pipe.rs  plumber_api.rs  plumber_api_call.rs  protocol.rs  pstd.rs  rust_servlet.rs  servlet.rs  va_list_helper.rs
